-#6799 Agrego los metadatos dc.coverage.spatial y dc.coverage.temporal que indican el alcance geográfico y temporal de un conjunto de datos
	- Si el conjunto de datos es sobre una región geográfica se debe indicar eso en dc.coverage.spatial
	- Si el conjunto de datos es sobre un período de tiempo, entonces se indica en dc.coverage.temporal
	- Cambio el input forms con las ayudas correspondientes, siguiendo las directrices SNRD de como deberían completarse estos campos
	- Agrego los metadatos a sedici-metadata
	- Agrego los metadatos a la vista sencilla de un item, junto tambien con el metadato sedici.metadata.ford que no se visualizaba

--- a/dspace/modules/xmlui/src/main/webapp/i18n/messages.xml
+++ b/dspace/modules/xmlui/src/main/webapp/i18n/messages.xml
@@ -2665,7 +2665,10 @@
 <message key="xmlui.dri2xhtml.METS-1.0.item-format">Physical description</message>
 <message key="xmlui.dri2xhtml.METS-1.0.item-format-extent">Pages</message>
 <message key="xmlui.dri2xhtml.METS-1.0.item-format-medium">Materials/Techniques</message>
+<message key="xmlui.dri2xhtml.METS-1.0.item-coverage-spatial">Geografic reach</message>
+<message key="xmlui.dri2xhtml.METS-1.0.item-coverage-temporal">Temporal reach</message>
 <message key="xmlui.dri2xhtml.METS-1.0.item-subject-materias">Subjects</message>
+<message key="xmlui.dri2xhtml.METS-1.0.item-subject-ford">FORD classification</message>
 <message key="xmlui.dri2xhtml.METS-1.0.item-subject">Keywords</message>
 <message key="xmlui.dri2xhtml.METS-1.0.item-relation-journal">Journal</message>
 <message key="xmlui.dri2xhtml.METS-1.0.item-relation-event">Event</message>
